--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Encontrá en Recetas de Ashelcha recetas fáciles, prácticas y originales para preparar los platos más ricos. Buscá recetas de entradas, platos principales, postres, panes, salsas y mucho más.">
+    <meta name="keywords" content="Recetas, Postres, Comidas, Panes, Cocina facil">
     </head>
 <body >
     <header>
@@ -47,6 +49,7 @@
         </div>
       </nav>
       <div class="container">
+        <h2>Recetas de la semana</h2>
           <div class="row">
               <div class="col 4">
         <div class="card" style="width: 18rem;">
@@ -82,6 +85,7 @@
 
       </div>
     </div>
+    
     <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
